@@ -26,4 +26,7 @@ fi
 # truncate on dir not allowed
 truncate -s+0 . && fail=1
 
+# getting the size of a dir is not allowed
+truncate -r. file && fail=1
+
 Exit $fail
