@@ -15,6 +15,8 @@ GNU coreutils NEWS                                    -*- outline -*-
   sort -g now uses long doubles for greater range and precision.
 
   truncate now supports setting file sizes relative to a reference file.
+  Also errors are no longer suppressed for unsupported file types, and
+  relative sizes are restricted to supported file types.
 
 * Noteworthy changes in release 8.5 (2010-04-23) [stable]
 
